fix td tables spacing

--- a/my-dashboard/src/app/globals.css
+++ b/my-dashboard/src/app/globals.css
@@ -245,6 +245,9 @@ body {
 .table-contact th + th {
   border-left: 2px solid white;
 }
+.table-contact td + td {
+  border-left: 2px solid white;
+}
 .table-contact tr:hover td {
   background: #fafaff;
 }
